# GeoGraphicLib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
GeographicWrapper/: CMakeLists.txt
GeographicWrapper/example/: main.cpp
GeographicWrapper/include/: GeoWrapper.h
GeographicWrapper/include/libprojection/: GeoWrapper.h
GeographicWrapper/include/libprojection/api/: geo.h
GeographicWrapper/include/libprojection/core/: type.h
GeographicWrapper/include/libprojection/crs/: crs.h
GeographicWrapper/include/libprojection/datum/: datum.h  ellipsoid.h  helmert.h  helmerttransform  helmerttransform.h
GeographicWrapper/include/libprojection/geodesy/: geodesicengine.h
GeographicWrapper/include/libprojection/projection/: projection.h  projectionfacade.h  transversemercator.h  utmprojection.h  webmercator.h
GeographicWrapper/include/libprojection/transform/: transformer.h
GeographicWrapper/src/: GeoWrapper.cpp  pygeowrapper.cpp
GeographicWrapper/src/api/: geo.cpp
GeographicWrapper/src/crs/: crs.cpp
GeographicWrapper/src/datum/: datum.cpp  ellipsoid.cpp  helmerttransform.cpp
GeographicWrapper/src/geodesy/: geodesicengine.cpp
GeographicWrapper/src/projection/: projectionfacade.cpp  transversemercator.cpp  utmprojection.cpp  webmercator.cpp
GeographicWrapper/src/transform/: transformer.cpp
WFSLib/: CMakeLists.txt
WFSLib/example/: main.cpp
WFSLib/include/: SLDClient.h  WFSClient.h
WFSLib/src/: SLDClient.cpp  SLDClient.h  WFSClient.cpp
python/testGeoGraphic/: main.py
